# spellcheck

./: README
debug/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  conf.h
debug/dict-check/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dict-check
debug/dict-editor/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dict-editor
debug/dictionary/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dictionary_test  word_list_test  word_tree_io_test  word_tree_test
debug/gtk-editor/: Makefile  cmake_install.cmake  editor
debug/lang-test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  lang-test
src/: CMakeLists.txt
src/dict-check/: CMakeLists.txt  dict-check.c
src/dict-editor/: dict-editor.c
src/dictionary/: CMakeLists.txt  dictionary.c  dictionary.h  dictionary_test.c  dynamic_array.c  dynamic_array.h  rules.c  rules.h  utils.h  word_list.c  word_list.h  word_list_test  word_list_test.c  word_tree.c  word_tree.h  word_tree_io_test.c  word_tree_test.c
src/lang-test/: CMakeLists.txt  lang-test.c
tests/: run_test.sh  testlist
tests/creepy/: c0.err  c0.in  c0.out  c1.err  c1.in  c1.out  c2.err  c2.out  c3.err  c3.in  c3.out  dict.in  dict.out  slownik.dict  testlist
tests/jibb/: c0.in  c1.err  c1.in  c1.out  c2.err  c2.in  c2.out  dict.in  dict.out  slownik.dict
tests/jibb2/: c0.err  c0.in  c0.out  c1.err  c1.in  c1.out  dict.in  dict.out  slownik.dict  testlist
tests/scp/: c1.err  c1.out  c2.err  c2.in  c2.out  c3.err  c3.out  dict.in  dict.out  slownik.dict
tests/sjp/: anon.err  anon.in  anon.out  (+16 more)
(+2 files in other folders)
